# probemap

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP_PLAN.md  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml
.cursor/rules/: git-feature-branches.mdc
.github/workflows/: ci.yml  release.yml
backend/: auth.py  config.py  icons.py  layout.py  log.py  main.py  metrics.py  settings.py  storage.py
data/: config.json  layout.json  projects.json
data/layouts/: 469a2f0b.json  5cf5533d.json  ca521d1a.json  cd7ea4d2.json  default.json
frontend/: README.md  eslint.config.js  group-node-mockup.html  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  CollisionContext.tsx  ContainerDropContext.tsx  ContextMenu.tsx  DeleteConfirmNameHint.tsx  DragContext.tsx  IconPicker.tsx  IconRenderer.tsx  KeyboardHints.tsx  LoginModal.tsx  MapObjectsBar.tsx  Palette.tsx  ProjectModal.tsx  ProjectSelect.tsx  ServiceLabelsSection.tsx  ServicesContext.tsx  Settings.tsx  Tooltip.tsx  TopologyCanvas.tsx  TraceContext.tsx  TrashIcon.tsx  TrashModal.tsx  api.ts  i18n.tsx  i18nLayout.ts  icons.ts  index.css  main.tsx  nodeKinds.ts  pollInterval.ts  probeAlert.ts  probeDisplay.ts  theme.css  theme.ts
frontend/src/edges/: DeletableEdge.tsx  EdgeMetadataModal.tsx  edgeInteractionContext.tsx
frontend/src/nodes/: ContainerNode.tsx  CustomNode.tsx  DeleteButton.tsx  GroupNode.tsx  ServiceNode.tsx  (+2 more)
tests/: conftest.py  test_config.py  test_main.py  test_metrics.py
