[project]
name = "probemap"
version = "0.1.0"
description = "Interactive service topology editor with live status from VictoriaMetrics"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.88",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
